# Tescord

./: .gitignore  DEPLOYMENT.md  DEPLOYMENT_SHARED_HOSTING.md  LICENSE  README.md
backend/: .env.example  .env.production.example  pyproject.toml
backend/alembic/versions/: 20260318_0004_add_voice_access_control.py  20260318_0005_add_voice_owner_mute.py  20260318_0006_add_default_tavern_channels.py  20260321_0011_add_user_avatar_fields.py  20260331_0013_add_server_conversation_kinds.py  20260331_0015_add_user_public_id.py  20260401_0017_add_attachment_disk_storage.py  20260402_0019_add_friend_requests.py  20260402_0020_add_friend_and_group_blocks.py  20260403_0021_add_push_notifications.py  20260410_0022_add_guest_voice_role.py
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/routes/: attention.py  auth.py  conversations.py  direct_calls.py  events.py  friends.py  messages.py  presence.py  push.py  servers.py  users.py  voice.py
backend/app/core/: config.py  security.py
backend/app/db/: models.py
backend/app/schemas/: attention.py  auth.py  conversations.py  friends.py  push.py  users.py  voice.py  workspace.py
backend/app/services/: app_events.py  attachment_storage.py  default_tavern.py  dev_seed.py  direct_call_signaling.py  direct_conversations.py  push_notifications.py  server_access.py  site_presence.py  user_public_id.py  voice_access.py  voice_signaling.py  workspace_events.py
backend/tests/: test_auth_workspace.py  test_conversations.py
frontend/: angular.json  package-lock.json  package.json
scripts/: bootstrap-ubuntu24.sh  (+1 more)
(+28 files in other folders)
